<?xml version="1.0"?>
<package format="3">
  <name>tesseract_scene_graph</name>
  <version>0.10.0</version>
  <description>The tesseract_scene_graph package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <depend>tesseract_common</depend>
  <depend>tesseract_geometry</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>boost</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
