<?xml version="1.0"?>
<package format="2">
  <name>tesseract_srdf</name>
  <version>0.14.0</version>
  <description>The tesseract_srdf package for parsing Tesseract specific srdf</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_common</depend>
  <depend>yaml-cpp</depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
